2A/05_Projet_GL/src/test/deca/syntax/invalid/SansObjet/15_IfElseElse.deca
// Description:
//    test de programme if avec plusieurs else >=2 sans condition
//
// Resultats:
//    ligne 17  : Erreur,  mismatched input 'else'
//
// Historique:
//    cree le 09/01/2024
{
    int x =0,y=5;
    if(x == 0){
        print("hello world!");
    }
    else{
        print("je suis dans else 01");
    }
    else{
        print("je suis dans else 02");
    }
}